# serde_with_object_id

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
