[package]
name = "serde_with_object_id"
version = "0.1.0"
edition = "2021"
authors = [
    "Suson Waiba"
]
categories = ["encoding", "no-std"]
description = "serde_with_object_id"
keywords = ["serde", "serde_with", "mongodb", "bson", "ObjectId"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/susonwaiba/serde_with_object_id"

[dependencies]
mongodb = { version = "2.4", features = ["bson-serde_with"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.3"
